--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<title> CV Romina Vespasiano</title>
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/styles.min.css">
 	<!-- Ion Icons -->
 	<link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 </head>
@@ -13,7 +13,7 @@
 	<header>
 			<article class="cv-topizq">
 			<h1 class="">Romina Vespasiano</h1>
-			<p >Front End Developer</p>
+			<p style="color: #fff; font-size: 18px;" >Front End Developer</p>
 			<p> E-mail:<a href="mailto:romivespasiano@gmail.com"> romivespasiano@gmail.com</a></p>
 			<ul>
 			<li> <a href="https://ar.linkedin.com/in/rominavespasiano" target="new"><i class="ion-social-linkedin iconostop"></i></a></li>
@@ -22,7 +22,7 @@
 			</ul>
 
 			</article>
-				<figure class="cv-foto"> <img src="images/cv-foto.jpg" alt="Romina Vespasiano - Diseño Gráfico y Web"></figure>
+				<figure class="cv-foto"> <img class= "foto"src="images/cv-foto.jpg" alt="Romina Vespasiano - Diseño Gráfico y Web"></figure>
 				<div class="cleaner"></div>
 		</article>
 	</header>	
@@ -44,22 +44,22 @@
 	<h2><i class="ion-android-person profile-icon"></i><span>Skills -Languages domain</span></h2>
 		<article>
 				<i class="ion-social-html5 skill-icon"></i>
-				<div class=star><i class="ion-android-star"></i><i class="ion-android-star"></i><i class="ion-android-star"></i></div>
+				<div class=star><i class="ion-android-star"></i><i class="ion-android-star star"></i><i class="ion-android-star"></i></div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi atque rem, molestias</p>
 		</article>
 		<article>
 				<i class="ion-social-css3 skill-icon"></i>
-				<div class=star><i class="ion-android-star"></i><i class="ion-android-star"></i><i class="ion-android-star"></i></div>
+				<div class=star><i class="ion-android-star"></i><i class="ion-android-star star"></i><i class="ion-android-star"></i></div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi atque rem, molestias</p>
 		</article>
 		<article>
 				<i class="ion-social-sass skill-icon"></i>
-				<div class=star><i class="ion-android-star"></i><i class="ion-android-star"></i><i class="ion-android-star"></i></div>
+				<div class=star><i class="ion-android-star"></i><i class="ion-android-star star"></i><i class="ion-android-star"></i></div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi atque rem, molestias</p>
 		</article>
 		<article>
-				<img src="images/bootstrap.svg">
-				<div class=star><i class="ion-android-star"></i><i class="ion-android-star"></i><i class="ion-android-star"></i></div>
+				<img class="icon-bootstrap"src="images/bootstrap.png">
+				<div class=star><i class="ion-android-star"></i><i class="ion-android-star star"></i><i class="ion-android-star"></i></div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi atque rem, molestias</p>
 		</article>
 		<div class="cleaner"></div>
